# weight_recoder

./: README.md  stack.yaml  weight-recoder.cabal  weight-recorder.cabal  weight.db
app/: Main.hs
data/: schema.sql
src/Entity/: User.hs  WeightRecord.hs
src/Model/: User.hs  User.hs.ORIG  WeightRecord.hs  WeightRecord.hs.ORIG
src/Web/: Core.hs  WeightRecorder.hs
src/Web/Action/: Login.hs  NewRecord.hs  Register.hs
src/Web/View/: Main.hs  Start.hs
templates/: main.mustache  start.mustache
