name:                weight-recoder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/weight-recoder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Entity.User
                     , Entity.WeightRecord
                     , Model.User
                     , Model.WeightRecord
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bcrypt
                     , bytestring
                     , filepath
                     , HDBC
                     , HDBC-sqlite3
                     , http-types
                     , Spock >= 0.11
                     , mustache
                     , mtl
                     , persistable-record
                     , relational-query-HDBC
                     , relational-query
                     , text
                     , time
                     , transformers
                     , wai

executable weight-recoder
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bcrypt
                     , bytestring
                     , filepath
                     , HDBC
                     , HDBC-sqlite3
                     , http-types
                     , Spock >= 0.11
                     , mustache
                     , mtl
                     , persistable-record
                     , relational-query-HDBC
                     , relational-query
                     , text
                     , time
                     , transformers
                     , wai
